--- a/pokeapi/deploy2/service.yaml
+++ b/pokeapi/deploy2/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pokeapi-service
+  name: pokeapi-instance2-service
 spec:
   selector:
-    app: pokeapi
+    app: pokeapi-instance2
   ports:
     - protocol: TCP
       port: 3000
