--- a/pokeapi/kustomization.yaml
+++ b/pokeapi/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: pokedox-kustomize
 resources:
-- deployment.yaml
-- service.yaml
+- deploy2/
+- deply1/
